<resources>
    <string name="app_name">CalculatedTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  title页面  -->
    <string name="title_message">Calculated Test</string>
    <string name="high_score_message">highScore:%d</string>
    <string name="title_image_message" translatable="false">titleImage</string>
    <string name="title_button_message">ENTER</string>

    <!--  question页面  -->
    <string name="current_score">currentScore:%d</string>
    <string name="equal_symbol" translatable="false">=</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="buttonClear" translatable="false">C</string>
    <string name="buttonSubmit">OK</string>

    <!--  win页面  -->
    <string name="win_image" translatable="false">winImage</string>
    <string name="win_title">Your WIn!</string>
    <string name="back_to_title">back</string>
    <string name="win_score_message">New Recor:%d</string>

    <!--  lose页面  -->
    <string name="lose_image" translatable="false">loseImage</string>
    <string name="lose_title">Your Lose!</string>

    <!--  弹窗提示  -->
    <string name="dialog_title_message">Are yuu sure to quit?</string>
    <string name="dialog_ok_message">OK</string>
    <string name="dialog_clear_message">Cancel</string>

    <!--  页面标题  -->
    <string name="title_tit">welcome</string>
    <string name="question_tit">Calculated Test</string>
    <string name="lose_tit">Lose</string>
    <string name="win_tit">Win</string>
</resources>